--- a/ElectricalPowerSystems/App.xaml
+++ b/ElectricalPowerSystems/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:ElectricalPowerSystems"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/lang.ru-RU.xaml">
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
